--- a/mru-food-detector-mobile-app/android/app/src/main/AndroidManifest.xml
+++ b/mru-food-detector-mobile-app/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="false" android:requestLegacyExternalStorage="true" android:theme="@style/AppTheme" android:hardwareAccelerated="true">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBet6h7vyAetvbVsvukPqWXCg-uT9tXn78" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="" />
 		<activity android:name=".MainActivity" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode" android:launchMode="singleTask" android:screenOrientation="portrait" android:windowSoftInputMode="adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
